note service fully implemented